overflow issue fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -475,16 +475,3 @@ aside li {
 .account-logout {
   display: inline-block;
 }
-
-.slider-container::-webkit-scrollbar {
-  display: none;
-  -webkit-appearance: none;
-  width: 0;
-  height: 0;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.slider-container {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
